@@ -1,12 +1,12 @@
-; $Id: admin_menu.info,v 1.5.2.1 2008/11/30 12:50:36 sun Exp $
+; $Id: admin_menu.info,v 1.5.2.2 2010/07/28 02:04:11 sun Exp $
 name = Administration menu
-description = Provides a dropdown menu to most administrative tasks and other common destinations (to users with the proper permissions).
+description = "Provides a dropdown menu to most administrative tasks and other common destinations (to users with the proper permissions)."
 package = Administration
 core = 6.x
 
-; Information added by drupal.org packaging script on 2009-07-02
-version = "6.x-1.5"
+; Information added by drupal.org packaging script on 2010-09-03
+version = "6.x-1.6"
 core = "6.x"
 project = "admin_menu"
-datestamp = "1246537502"
+datestamp = "1283512306"
 
