@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.33.2.58 2009/07/02 12:10:37 sun Exp $
+// $Id: CHANGELOG.txt,v 1.33.2.65 2010/09/03 11:06:03 sun Exp $
 
 Admin Menu x.x-x.x, xxxx-xx-xx
 ------------------------------
@@ -6,6 +6,16 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 6.x-1.x, xxxx-xx-xx
 ------------------------------
+
+
+Admin Menu 6.x-1.6, 2010-09-03
+------------------------------
+#567618 by indytechcook, neclimdul: Fixed tests.
+#860390 by Kevin Rogers: Fixed .info file parsing error on uncertain platform.
+#645526 by TravisCarden, hutch: Fixed stale local tasks markup after moving them.
+#615058 by Dave Reid: Fixed compatibility with PHP 5.3.
+#540762 by Deslack: Added Malay translation.
+#362454 by sun: Fixed Drupal.settings.admin_menu is undefined error.
 
 
 Admin Menu 6.x-1.5, 2009-07-02
